--- a/app/ui/styling/globals.css
+++ b/app/ui/styling/globals.css
@@ -7,14 +7,26 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
-body {
+/* body {
   color: var(--foreground);
   background: var(--background);
+} */
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  overscroll-behavior: none;
 }
